--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -105,7 +105,7 @@ Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bl
 
 Mimo że współczynnik temperaturowy jest stosunkowo mały i stanowi jedynie \SI{0,17}{\%} całej prędkości,
 to przy odległościach rzędu metrów i rozdzielczościach rzędu milimetrów staje się on istotny, 
-dlatego w przypadku prezentowanego prototypu kluczowa jest  kalibracja wstępna, która pozwala
+dlatego w przypadku prezentowanego prototypu niezbędna jest kalibracja wstępna, która pozwala
 wyznaczyć aktualną prędkość dźwięku.
 
 
